add koneksi ke Be dan add register

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^1.1.0
+  image_picker: ^1.0.4
+  dio: ^5.4.0
   flutter:
     sdk: flutter
 
