--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.4
   dio: ^5.4.0
+  intl: ^0.18.1
   shared_preferences: ^2.2.2
   flutter:
     sdk: flutter
